# touchdown-point-detection

./: .gitignore  README.md  pyproject.toml  requirements.md  touchdown-adsb-overview.pptx
config/: tdz_config.yaml
ideas_docs/: DESIGN.md  REQUIREMENTS.md
tdz/: __init__.py  assemble.py  models.py  pipeline.py  reproducibility.py
tdz/bracket/: __init__.py  classify.py  coarse_bracket.py
tdz/config/: __init__.py  errors.py  loader.py  models.py  schema.py
tdz/estimators/: __init__.py
tdz/fusion/: __init__.py  ensemble.py
tdz/geo/: __init__.py  datum.py  errors.py  gates.py  lever_arm.py  mapping.py  projection.py  runway.py
tdz/io/: __init__.py  gating.py  ingest.py  qa.py  raw_schema.py  readers.py
tdz/signals/: __init__.py  derivatives.py  features.py  segmented.py
tdz/tests/: __init__.py  conftest.py  test_bracket.py  test_changepoint_estimators.py  test_clock_alignment.py  test_config.py  test_fusion.py  test_geo_datum.py  test_geo_gates.py  test_geo_lever_arm.py  test_geo_projection.py  test_geo_runway.py  test_hybrid_residual.py  test_io_ingest.py  test_io_qa.py  test_lightgbm_estimator.py  test_mapping_assemble.py  test_milestone_report.py  test_models.py  test_physics_estimators.py  test_pipeline_baseline.py  test_raw_schema.py  test_readers.py  test_reproducibility.py  test_sequence_model.py  test_signals.py  test_smoke.py  test_timebase.py  test_uncertainty.py  test_validation_coverage.py  test_validation_cross_source.py  test_validation_metrics.py  test_validation_splits.py
tdz/timebase/: __init__.py  interpolation.py
tdz/uncertainty/: __init__.py  conformal.py  quantifier.py  widening.py
(+28 files in other folders)
