[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tdz"
version = "0.1.0"
description = "Touchdown point inference from ADS-B surveillance data for landing-safety analysis"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Touchdown Point Detection" }]

# Core runtime stack (per README suggested stack).
# All internal computation is held in SI units (m, m/s, s, rad); presentation
# units (feet, knots) are produced only at the output boundary.
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "pyproj>=3.6",        # geodesy + geoid (EGM2008) corrections
    "ruptures>=1.1",      # PELT / CUSUM change-point detection
    "filterpy>=1.4.5",    # Kalman / IMM state estimation
    "scikit-learn>=1.3",
    "lightgbm>=4.1",
    "torch>=2.1",         # TCN / BiLSTM sequence model
    "PyYAML>=6.0",        # configuration loading
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "hypothesis>=6.88",
]

[tool.setuptools.packages.find]
include = ["tdz*"]

[tool.pytest.ini_options]
testpaths = ["tdz/tests"]
markers = [
    "property: Property-based tests (run with Hypothesis, min 100 iterations)",
    "unit: Example-based unit tests",
    "integration: End-to-end pipeline tests",
    "validation: Tests requiring QAR truth data",
    "slow: Tests taking >30 seconds",
]

[tool.hypothesis]
max_examples = 100
deadline = 10000  # 10s per example (some involve pipeline processing)
